--- a/_sass/_archive.scss
+++ b/_sass/_archive.scss
@@ -15,7 +15,8 @@
   }
 
   a {
-    text-decoration: underline;
+  	color: inherit;
+    text-decoration: none;
 
     &:hover {
       text-decoration: underline;
