--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -13,7 +13,7 @@
   margin-bottom: 0;
   padding-left: 2em;
   padding-right: 2em;
-  font-family: $sans-serif;
+  font-family: $fantasy;
   -webkit-animation: intro 0.3s both;
           animation: intro 0.3s both;
   -webkit-animation-delay: 0.30s;
@@ -77,7 +77,7 @@
     a {
       margin-bottom: 0.25em;
       padding: 0.5em 1em;
-      font-family: $sans-serif;
+      font-family: $fantasy;
       font-size: 14px;
       font-weight: bold;
       line-height: 1.5;
@@ -126,7 +126,7 @@
     padding: 1em 2em;
     float: left;
     width: 50%;
-    font-family: $sans-serif;
+    font-family: $fantasy;
     font-size: $type-size-5;
     font-weight: bold;
     text-align: center;
