--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -13,7 +13,7 @@
   margin-bottom: 0;
   padding-left: 2em;
   padding-right: 2em;
-  font-family: $fantasy;
+  font-family: $sans-serif;
   -webkit-animation: intro 0.3s both;
           animation: intro 0.3s both;
   -webkit-animation-delay: 0.30s;
@@ -77,7 +77,7 @@
     a {
       margin-bottom: 0.25em;
       padding: 0.5em 1em;
-      font-family: $fantasy;
+      font-family: $sans-serif;
       font-size: 14px;
       font-weight: bold;
       line-height: 1.5;
@@ -93,7 +93,7 @@
 
       &.current {
         color: #fff;
-        background: $red;
+        background: $primary-color;
       }
 
       &.disabled {
@@ -126,7 +126,7 @@
     padding: 1em 2em;
     float: left;
     width: 50%;
-    font-family: $fantasy;
+    font-family: $sans-serif;
     font-size: $type-size-5;
     font-weight: bold;
     text-align: center;
@@ -196,7 +196,7 @@
     padding: 0 0.5rem;
     border: 0;
     outline: none;
-    background-color: $red;
+    background-color: $primary-color;
     color: #fff;
     cursor: pointer;
   }
@@ -382,7 +382,7 @@
   .nav__title {
     color: #fff;
     font-size: $type-size-6;
-    background: $red;
+    background: $primary-color;
     border-top-left-radius: $border-radius;
     border-top-right-radius: $border-radius;
   }
@@ -406,7 +406,7 @@
 
     &:hover {
       color: #000;
-      background: $red;
+      background: $lighter-gray;
     }
   }
 
